# PythonPowerBi

./: Python+Powerbi.ipynb  README.md  Relatorio Powerbi.pbix  config_powerbyPython.txt  pyproject.toml
