[project]
name = "PythonPowerbi"
version = "0.1.0"
description = ""
authors = [{name = "Sergio Luiz Semprebom",email = "semprebom@apoioprodesp.sp.gov.br"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
